--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -20,6 +20,8 @@ nav{
     height: 80px;
     background-color: white;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+    position: fixed;
+    width: 100%;
 }
 
 .logo {
