--- a/styles/header.css
+++ b/styles/header.css
@@ -3,9 +3,58 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100vh;
-    background-color:bisque;
+    padding: 100px 0px 0px 0px;
+    background-color: #f5f5f5;
 }
-.header img{
+.header-gif{
+    width: 50%;
+}
+
+.header-gif img{
+    max-width: 500px;
     width: 100%;
+}
+.header-text h1{
+    font-size: 40px;
+    color: #444444;
+    text-shadow: 2px 2px 1px grey;
+}
+.header-text p{
+    font-size: 18px;
+    color: #777777;
+    width: 70%;
+    margin: 30px 0px;
+}
+
+@media screen and (max-width:912px) {
+    .header-text h1{
+        font-size: 30px;
+    }
+    .header-text p{
+        font-size: 14px;
+        color: #777777;
+        width: 70%;
+        margin: 25px 0px;
+        line-height: 20px;
+    }
+}
+@media screen and (max-width:768px) {
+.header{
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* height: 100vh; */
+    padding: 80px 30px 100px 30px;
+
+}
+.header-gif{
+    width: 100%;
+}
+.header-text h1{
+    font-size: 25px;
+}
+.header-text p{
+    width: 90%;
+    margin: 25px 0px;
+}
 }
