--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -51,7 +51,8 @@ nav ul li a:hover{
 .bars{
     display: none;
     color: var(--green);
-    background-color: #c0c0c0;
+    background-color: #f1efef;
+    border-radius: 3px;
     padding: 5px 7px;
     font-size: 25px;
 }
