--- a/styles/button.css
+++ b/styles/button.css
@@ -11,7 +11,7 @@
     border-radius: 3px;
     box-shadow: 3px 3px 1px 1px #16a0845a;
     transition: 0.4s;
-
+    cursor: pointer;
 }
 .btn span{
     background-color: var(--green);
