--- a/styles/header.css
+++ b/styles/header.css
@@ -1,3 +1,8 @@
+:root{
+    --green:#16a085;
+    --black:#444;
+    --light-color:#777;
+}
 .header{
     display: flex;
     justify-content: center;
@@ -26,6 +31,18 @@
     margin: 30px 0px;
 }
 
+.section-title{
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 50px;
+    font-weight: 900;
+    text-shadow: 3px 3px 3px gray;
+
+}
+#services span:nth-child(2){
+    color: var(--green);
+}
+
 @media screen and (max-width:912px) {
     .header-text h1{
         font-size: 30px;
@@ -36,6 +53,9 @@
         width: 70%;
         margin: 25px 0px;
         line-height: 20px;
+    }
+    .section-title{
+        font-size: 40px;
     }
 }
 @media screen and (max-width:768px) {
@@ -56,5 +76,8 @@
 .header-text p{
     width: 90%;
     margin: 25px 0px;
+}
+.section-title{
+    font-size: 30px;
 }
 }
