--- a/styles/services.css
+++ b/styles/services.css
@@ -15,6 +15,7 @@
     padding: 30px;
 }
 .services-box{
+    background-color: white;
     padding: 20px;
     display: flex;
     flex-direction: column;
