--- a/styles/header.css
+++ b/styles/header.css
@@ -11,10 +11,15 @@
     padding: 100px 0px 0px 0px;
     background-color: #f5f5f5;
 }
+#about{
+    background-color: white;
+}
 .header-gif{
     width: 50%;
 }
-
+#about-text{
+    width: 70%;
+}
 .header-gif img{
     max-width: 500px;
     width: 100%;
@@ -42,7 +47,12 @@
 #services span:nth-child(2){
     color: var(--green);
 }
-
+#about-title{
+    margin-top: 50px;
+}
+#about-title span:nth-child(1){
+    color: var(--green);
+}
 @media screen and (max-width:912px) {
     .header-text h1{
         font-size: 30px;
@@ -68,6 +78,9 @@
 
 }
 .header-gif{
+    width: 100%;
+}
+#about-text{
     width: 100%;
 }
 .header-text h1{
