--- a/styles/header.css
+++ b/styles/header.css
@@ -73,7 +73,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    /* height: 100vh; */
     padding: 80px 30px 100px 30px;
 
 }
