--- a/styles/footer.css
+++ b/styles/footer.css
@@ -34,6 +34,7 @@
 }
 .footer .footer-box a{
     cursor: pointer;
+    color: var(--light-color);
 }
 .footer .footer-box span{
     margin-right: 10px;
