--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -13,6 +13,10 @@
     --light-color:#777;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 nav{
     display: flex;
     justify-content: space-between;
